--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
         </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer page -->
     <footer class="bg-glass border-t mt-8">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="flex flex-col md:flex-row justify-between items-center">
