--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         }
 
         body {
-            background: linear-gradient(135deg, #d76fb8 0%, #e376a9 100%);
+            background: linear-gradient(135deg, #00bfff 0%, #00bfff
+             100%);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
